# loomc

./: .gitignore  LICENSE  README.md  loomc-brief.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: code_fixer.py
src/loomc/: __init__.py  _types.py  adapters.py  backtrack.py  budget.py  checkpoint.py  cli.py  convergence.py  loop.py
tests/: test_adapters.py  test_async.py  test_budget.py  test_checkpoint.py  test_convergence.py  test_loop.py
