[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loomc"
version = "0.1.0"
description = "Declarative loop specs compiled into resilient agent execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "routsom" }]
keywords = ["agents", "llm", "loop", "budget", "checkpointing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
embeddings = ["sentence-transformers"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
loomc = "loomc.cli:main"

[project.urls]
Homepage = "https://github.com/routsom/loomc"
"Bug Tracker" = "https://github.com/routsom/loomc/issues"
"Source Code" = "https://github.com/routsom/loomc"

[tool.hatch.build.targets.wheel]
packages = ["src/loomc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
